2009-01-23  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

  * Increase version to 1.01.

	* CGS4 has been split into CGS4Old and CGS4New to accomodate for new
	DHS.

2006-07-21 Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* Add lib/Astro/FITS/HdrTrans/JAC.pm module to act as base class
	for JAC instruments.

	* Add OBSERVATION_ID generic header.

	* Add tests for CGS4, SCUBA.

2006-01-30  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* lib/Astro/FITS/HdrTrans/ACSIS.pm: Modify OBSERVATION_MODE
	translation to not include 'science' if it exists in the OBS_TYPE
	header, use Astro::FITS::HdrTrans::FITS base class for standard
	FITS translations such as DATE-OBS.

2006-01-27  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* lib/Astro/FITS/HdrTrans/ACSIS.pm: Added ACSIS translations.

2005-04-10  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/FITS/HdrTrans/Base.pm (can_translate): Support regular
	expression in this_instrument() method. This allows IRCAM to match
	IRCAM and IRCAM3.

2005-04-05  Tim Jenness  <timj@jach.hawaii.edu>

	* All modules: Major rewriting of the internals to use inheritance
	and method importing. This leads to much smaller individual
	translation classes and hopefully will be easier to support with
	less duplication of code. Note that the public function interface
	is unchanged but the public access to variables has been removed
	(and replaced with some class methods).

2005-03-28  Tim Jenness <t.jenness@jach.hawaii.edu>

	* Add GPL to all files

2005-03-17  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* HdrTrans/UFTI.pm, HdrTrans/UKIRTDB.pm, HdrTrans/UIST.pm,
	HdrTrans/WFCAM.pm: Handle DATE-OBS and DATE-END headers
	in ISO8601 format.

2005-03-16  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* HdrTrans/CGS4.pm: Header keywords for telescope offsets were changed
	from RAOFF/DECOFF to TRAOFF/TDECOFF, so change the translation code
	to reflect this.

2004-12-02  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>
